[gd_scene load_steps=37 format=2]

[ext_resource path="res://scripts/player/states/motion/on_ground/run.gd" type="Script" id=1]
[ext_resource path="res://scripts/player/player_controller.gd" type="Script" id=2]
[ext_resource path="res://sprites/player/player_sprites.png" type="Texture" id=3]
[ext_resource path="res://scripts/player/player_state_machine.gd" type="Script" id=4]
[ext_resource path="res://scripts/player/health/health.gd" type="Script" id=5]
[ext_resource path="res://scripts/player/states/motion/in_air/jump.gd" type="Script" id=6]
[ext_resource path="res://scripts/player/states/motion/on_wall/grab.gd" type="Script" id=7]
[ext_resource path="res://scripts/player/states/combat/hurt.gd" type="Script" id=8]
[ext_resource path="res://scripts/player/states/skill/skills/dash.gd" type="Script" id=9]
[ext_resource path="res://scripts/player/states/skill/skill_manager.gd" type="Script" id=10]
[ext_resource path="res://scripts/player/states/skill/skills/hook.gd" type="Script" id=11]
[ext_resource path="res://scripts/player/states/skill/skill.gd" type="Script" id=12]
[ext_resource path="res://prefabs/Camera2D.tscn" type="PackedScene" id=13]
[ext_resource path="res://audio/player/player_jump.ogg" type="AudioStream" id=14]
[ext_resource path="res://scripts/player/jump_sound.gd" type="Script" id=15]
[ext_resource path="res://audio/player/player_hurt.ogg" type="AudioStream" id=16]
[ext_resource path="res://sprites/character/player_death_explosion.png" type="Texture" id=17]
[ext_resource path="res://sprites/character/PivotArrow.gd" type="Script" id=18]
[ext_resource path="res://sprites/arrow_dir.png" type="Texture" id=19]
[ext_resource path="res://scripts/player/states/skill/skills/backJump.gd" type="Script" id=20]
[ext_resource path="res://sprites/player/rope.png" type="Texture" id=21]
[ext_resource path="res://sprites/player/hook.png" type="Texture" id=22]
[ext_resource path="res://sprites/player/light.png" type="Texture" id=23]
[ext_resource path="res://scripts/player/states/skill/skills/HookObject.gd" type="Script" id=24]
[ext_resource path="res://scripts/player/states/die.gd" type="Script" id=25]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform vec4 eyesColor: hint_color;

void fragment(){
	vec4 pixelColor = texture(TEXTURE, UV);
	if (pixelColor.r < 0.11 && pixelColor.g > 0.99 && pixelColor.b < 0.01) {
		COLOR = eyesColor;
	} else {
		COLOR = pixelColor;
	}
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/eyesColor = Color( 0.262745, 0.984314, 0, 1 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 9.0
height = 7.0

[sub_resource type="Animation" id=4]
resource_name = "dash"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=5]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 5 ]
}

[sub_resource type="Animation" id=6]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 7 ]
}

[sub_resource type="Animation" id=7]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 8, 9 ]
}

[sub_resource type="Animation" id=8]
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 10, 11, 12, 13, 14, 15, 16, 17, 18, 19 ]
}

[sub_resource type="Animation" id=9]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=11]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("DeathAnimation/player_death_explosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 5, 6, 7, 8 ]
}

[node name="Player" type="KinematicBody2D"]
position = Vector2( 64, -40 )
z_index = 1
collision_layer = 5
script = ExtResource( 2 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 23 )
texture_scale = 0.27
color = Color( 0.219608, 1, 0, 1 )
energy = 0.85
range_layer_min = -200

[node name="Sprite" type="Sprite" parent="."]
light_mask = 0
material = SubResource( 2 )
position = Vector2( -2.31671, -4.57175 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )
hframes = 5
vframes = 4
frame = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="FrontRayCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 10, 0 )
collision_mask = 5

[node name="BackRayCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -10, 0 )

[node name="DownRayCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 13 )
collision_mask = 5

[node name="DownRayCast2" type="RayCast2D" parent="."]
position = Vector2( -7, 0 )
enabled = true
cast_to = Vector2( 0, 13 )
collision_mask = 5

[node name="DownRayCast3" type="RayCast2D" parent="."]
position = Vector2( 7, 0 )
enabled = true
cast_to = Vector2( 0, 13 )
collision_mask = 5

[node name="UpRayCast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, -14 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/dash = SubResource( 4 )
anims/fall = SubResource( 5 )
anims/grab = SubResource( 6 )
anims/jump = SubResource( 7 )
anims/run = SubResource( 8 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
anims/hurt = SubResource( 9 )
anims/normal = SubResource( 10 )

[node name="DeathAnimation" type="AnimationPlayer" parent="."]
anims/deathAnimation = SubResource( 11 )

[node name="player_death_explosion" type="Sprite" parent="DeathAnimation"]
position = Vector2( 64, -46.3568 )
scale = Vector2( 1.6, 1.6 )
texture = ExtResource( 17 )
hframes = 12

[node name="Camera2D" parent="." instance=ExtResource( 13 )]
limit_left = -700
limit_right = 700

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 4 )
START_STATE = NodePath("Jump")

[node name="Run" type="Node" parent="StateMachine"]
script = ExtResource( 1 )
MAX_RUN_SPEED = 200.0

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource( 6 )
MAX_FALLS_SPEED = 300.0
JUMP_SPEED_X = 280.0
JUMP_SPEED_Y = 400.0
MOTION_CONSERVATION_X = 0.155
DECREASE_IN_RELEASE = 0.209

[node name="Grab" type="Node" parent="StateMachine"]
script = ExtResource( 7 )
SLIDE_ACCEL = 3.0
MAX_SLIDE_SPEED = 150.0

[node name="Hurt" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="FrozenTimer" type="Timer" parent="StateMachine/Hurt"]
wait_time = 0.6
one_shot = true

[node name="Die" type="Node" parent="StateMachine"]
script = ExtResource( 25 )

[node name="Skill" type="Node" parent="StateMachine"]
script = ExtResource( 10 )
START_SKILL = NodePath("Null")

[node name="Dash" type="Node" parent="StateMachine/Skill"]
script = ExtResource( 9 )
DASH_SPEED = 450.0

[node name="ActivateTimer" type="Timer" parent="StateMachine/Skill/Dash"]
wait_time = 0.3
one_shot = true

[node name="Hook" type="Node" parent="StateMachine/Skill"]
script = ExtResource( 11 )
THROW_SPEED = 500.0
MAX_GRAPPLING_DISTANCE = 500.0

[node name="ThrowingTimer" type="Timer" parent="StateMachine/Skill/Hook"]
one_shot = true

[node name="GripplingLine" type="Line2D" parent="StateMachine/Skill/Hook"]
z_index = 2
width = 6.0
default_color = Color( 1, 1, 1, 1 )
texture = ExtResource( 21 )
texture_mode = 1

[node name="HookObject" type="Node2D" parent="StateMachine/Skill/Hook"]
visible = false
position = Vector2( 64, -41.3387 )
script = ExtResource( 24 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="StateMachine/Skill/Hook/HookObject"]
rotation = 1.5708
scale = Vector2( 0.8, 0.8 )
z_index = 1
texture = ExtResource( 22 )

[node name="BackJump" type="Node" parent="StateMachine/Skill"]
script = ExtResource( 20 )
cooldown = 2.0
JUMP_FORCE = 0.0

[node name="Null" type="Node" parent="StateMachine/Skill"]
script = ExtResource( 12 )

[node name="CooldownTimer" type="Timer" parent="StateMachine/Skill"]
one_shot = true

[node name="Health" type="Node" parent="."]
script = ExtResource( 5 )
max_health = 6

[node name="InvincibleTimer" type="Timer" parent="Health"]
wait_time = 2.0
one_shot = true

[node name="JumpPressedTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="GroundedTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="HookRayCast" type="RayCast2D" parent="."]
collision_mask = 2

[node name="SoundJump" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
volume_db = -16.0
pitch_scale = 1.17
script = ExtResource( 15 )

[node name="SoundHurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
volume_db = -8.0

[node name="PivotArrow" type="Node2D" parent="."]
script = ExtResource( 18 )

[node name="DirectionArrow" type="Sprite" parent="PivotArrow"]
position = Vector2( 35, 0 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 19 )

[connection signal="animation_finished" from="DeathAnimation" to="." method="_on_DeathAnimation_animation_finished"]
